added support for linear model correction